syntax = "proto3";

package weaviate.v0;

message SearchRequest {
}

message SearchReply {
}

